--- a/fbuinstagram/Base.lproj/Main.storyboard
+++ b/fbuinstagram/Base.lproj/Main.storyboard
@@ -370,6 +370,13 @@
                                                     <rect key="frame" x="340" y="21" width="20" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KPp-h5-b23">
+                                                    <rect key="frame" x="66" y="35" width="0.0" height="0.0"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
@@ -377,6 +384,7 @@
                                             <outlet property="dateLabel" destination="nSd-dm-PWC" id="R9y-61-pR0"/>
                                             <outlet property="likeButton" destination="Edb-5p-cIY" id="5oz-B1-w0a"/>
                                             <outlet property="likeCountLabel" destination="2zh-1G-jZ5" id="Cb4-z2-pCr"/>
+                                            <outlet property="locationLabel" destination="KPp-h5-b23" id="x2J-GB-Itz"/>
                                             <outlet property="postedImage" destination="fia-zC-aQ9" id="ALw-cL-ybd"/>
                                             <outlet property="ppImage" destination="l0E-4s-2SP" id="qCf-Pl-2a6"/>
                                             <outlet property="screennameLabel" destination="Uqe-Ts-hMI" id="odf-Iw-9wc"/>
@@ -443,7 +451,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OBw-Yh-3lD">
-                                <rect key="frame" x="0.0" y="174" width="375" height="0.5"/>
+                                <rect key="frame" x="0.0" y="174" width="375" height="1"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
@@ -465,6 +473,13 @@
                                     <action selector="uploadOldPhotoTap:" destination="uRQ-Lj-ALx" eventType="touchUpInside" id="bAR-ar-mJZ"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add a Location..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zGF-tg-ZWe">
+                                <rect key="frame" x="16" y="210" width="343" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="zEt-xB-0mc"/>
@@ -485,6 +500,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="captionLabel" destination="blR-oA-XYB" id="F2a-hy-sgd"/>
+                        <outlet property="locationField" destination="zGF-tg-ZWe" id="qGz-Ae-7ED"/>
                         <outlet property="myUITextView" destination="blR-oA-XYB" id="wNm-WI-nZO"/>
                         <outlet property="picToUpload" destination="SGH-PP-n3F" id="yIo-GF-kpB"/>
                         <outlet property="uploadPhotoTap" destination="k4S-Wh-TTF" id="kKN-z4-QGz"/>
@@ -689,9 +705,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="#" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7vk-fm-LD4">
-                                <rect key="frame" x="13" y="553" width="8" height="15"/>
+                                <rect key="frame" x="13" y="553" width="20" height="15"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fT5-IB-NI9">
+                                <rect key="frame" x="71" y="103" width="0.0" height="0.0"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -705,6 +728,7 @@
                         <outlet property="dateLabel" destination="u5R-5x-WU5" id="sG4-wy-Mqe"/>
                         <outlet property="likeButton" destination="8nX-yN-EfM" id="z3D-7C-udh"/>
                         <outlet property="likeCountLabel" destination="7vk-fm-LD4" id="nMg-lQ-cOM"/>
+                        <outlet property="locationLabel" destination="fT5-IB-NI9" id="Ihj-tn-Aak"/>
                         <outlet property="postedImage" destination="2V2-WN-4Dh" id="dpn-9A-Lrv"/>
                         <outlet property="ppImage" destination="tyZ-wJ-gRp" id="ZGI-Gd-qiT"/>
                         <outlet property="screennameLabel" destination="fRD-BE-waQ" id="jva-l7-Faw"/>
